fix constructor() in all components

--- a/components/blocker/blocker-choosen.component.html
+++ b/components/blocker/blocker-choosen.component.html
@@ -36,7 +36,7 @@
     class BlockerChoosen extends HTMLElement {
 
         constructor() {
-            super()
+            super();
         }
 
         connectedCallback() {
