--- a/components/cards/feature-card.component.html
+++ b/components/cards/feature-card.component.html
@@ -70,8 +70,7 @@
             return this.hasAttribute('teststart');
         }
         constructor() {
-            super()
-
+            super();
         }
 
         connectedCallback() {
