--- a/components/kanban/sprint-header.component.html
+++ b/components/kanban/sprint-header.component.html
@@ -38,12 +38,11 @@
     class SprintHeader extends HTMLElement {
 
         constructor() {
-            super()
-            this.appendChild(SprintHeaderTemplate.content.cloneNode(true));
-            console.log(this);
+            super();
         }
 
         connectedCallback() {
+            this.appendChild(SprintHeaderTemplate.content.cloneNode(true));
 
         }
 
