--- a/components/navbar/navbar-horizontal.component.html
+++ b/components/navbar/navbar-horizontal.component.html
@@ -52,11 +52,11 @@
     class NavbarHorizontal extends HTMLElement {
 
         constructor() {
-            super()
-            this.appendChild(NavbarHorizontalTemplate.content.cloneNode(true));
+            super();
         }
 
         connectedCallback() {
+            this.appendChild(NavbarHorizontalTemplate.content.cloneNode(true));
 
         }
 
