--- a/components/navbar/navbar-vertical.component.html
+++ b/components/navbar/navbar-vertical.component.html
@@ -36,12 +36,11 @@
     class NavbarVertical extends HTMLElement {
 
         constructor() {
-            super()
-            this.appendChild(NavbarVerticalTemplate.content.cloneNode(true));
+            super();
         }
 
         connectedCallback() {
-
+            this.appendChild(NavbarVerticalTemplate.content.cloneNode(true));
         }
 
         adoptedCallback() {
