--- a/components/sidebar-wrapp/sidebar-textinput.component.html
+++ b/components/sidebar-wrapp/sidebar-textinput.component.html
@@ -52,12 +52,12 @@
     class SidebarTextInput extends HTMLElement {
 
         constructor() {
-            super()
-            this.appendChild(SidebarTextInputTemplate.content.cloneNode(true));
-
+            super();
         }
 
         connectedCallback() {
+            this.appendChild(SidebarTextInputTemplate.content.cloneNode(true));
+
             this.querySelector('.sidebar-textinput__header').innerHTML = this.getAttribute('title');
             if (this.getAttribute('placeholder') != null) {
                 this.querySelector('.sidebar-textinput__text').setAttribute('placeholder', this.getAttribute('placeholder'));
