--- a/components/sidebar-wrapp/sidebar-wrapp.component.html
+++ b/components/sidebar-wrapp/sidebar-wrapp.component.html
@@ -41,11 +41,11 @@
     class SidebarWrapp extends HTMLElement {
 
         constructor() {
-            super()
-            this.appendChild(SidebarWrappTemplate.content.cloneNode(true));
+            super();
         }
 
         connectedCallback() {
+            this.appendChild(SidebarWrappTemplate.content.cloneNode(true));
 
         }
 
